changes in project

--- a/projects.html
+++ b/projects.html
@@ -148,7 +148,7 @@
           </div>
           <div class="card" id="pro">
             <img src="imgs/icecream.png" class="img-thumbnail" alt="Snow_Icecream_Landing_Page">
-            <div class="card-bod
+            <div class="card-body">
               <h5 class="card-title text-center">Snow Icecreams Shop Landing Page</h5>
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
