changes in project page ui

--- a/projects.html
+++ b/projects.html
@@ -237,9 +237,9 @@
       </div>
    
     <center> 
-     <p> For more Web Development projects visit my <a href="https://github.com/madhumitha-r26?tab=repositories" target="_blank">
-         GitHub Profile
-      </a> and
+     <p> 
+      For more Web Development projects visit my
+      <a href="https://github.com/madhumitha-r26?tab=repositories" target="_blank">GitHub Profile</a> and
       <a href="https://codepen.io/madhumitha-ravichandran26"> Codepen Profile </a> </p>
     </center>
 
