change in project ui

--- a/projects.html
+++ b/projects.html
@@ -238,7 +238,7 @@
    
     <center> 
      <p> 
-      For more Web Development projects visit my
+      For more Web Development projects and other coding related projects visit my
       <a href="https://github.com/madhumitha-r26?tab=repositories" target="_blank">GitHub Profile</a> and
       <a href="https://codepen.io/madhumitha-ravichandran26"> Codepen Profile </a> </p>
     </center>
