--- a/projects.html
+++ b/projects.html
@@ -227,7 +227,7 @@
               <p class="text-center fst-italic">This project is under development</p> 
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
-              <a href="#"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
+              <a href="https://react-resume-builder-rose.vercel.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/React-Resume-Builder.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
               <a href="#"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
@@ -274,7 +274,7 @@
                     <div class="card-footer d-grid gap-1 d-flex justify-content-center">
                       <a href="https://www.figma.com/proto/wEQnVB5UIU4YCDkm9oyoTX/ecommerce-application?node-id=2-2&t=c2C1k9sCGadLr49p-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
                       <a href="https://www.behance.net/gallery/206493041/E-Commerce-Application-UI-Design" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-behance"></i></button></a> 
-                      <a href="https://youtu.be/fluPQUmzbXo" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i></button></a> 
+                      <a href="https://drive.google.com/file/d/1VSbfnywr_sAa7bdWMPFzSzLFQAsQLV-K/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i></button></a> 
                     </div>
                 </div>
               </div>
