--- a/projects.html
+++ b/projects.html
@@ -223,12 +223,12 @@
             <img src="imgs/resume-builder.png" class="img-thumbnail pro_img" alt="react-resume-builder">
             <div class="card-content">
             <div class="card-body">
-              <h5 class="card-title text-center">React Resume Builder</h5>    
+              <h5 class="card-title text-center">Perfect Resume Builder</h5>    
               <p class="text-center fst-italic">This project is under development</p> 
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
-              <a href="https://react-resume-builder-rose.vercel.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
-              <a href="https://github.com/madhumitha-r26/React-Resume-Builder.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
+              <a href="#"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
+              <a href="https://github.com/madhumitha-r26/Resume-Builder.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
               <a href="#"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
