change in project

--- a/projects.html
+++ b/projects.html
@@ -227,8 +227,8 @@
               <p class="text-center fst-italic">This project is under development</p> 
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
-              <a href="#"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
-              <a href="https://github.com/madhumitha-r26/Resume-Builder.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
+              <a href="https://react-resume-builder-0512.netlify.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
+              <a href="https://github.com/madhumitha-r26/React-Resume-Builder.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
               <a href="#"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
