change in project

--- a/projects.html
+++ b/projects.html
@@ -223,7 +223,7 @@
             <img src="imgs/resume-builder.png" class="img-thumbnail pro_img" alt="react-resume-builder">
             <div class="card-content">
             <div class="card-body">
-              <h5 class="card-title text-center">Perfect Resume Builder</h5>    
+              <h5 class="card-title text-center">React Resume Builder</h5>    
               <p class="text-center fst-italic">This project is under development</p> 
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
