just now committed

--- a/projects.html
+++ b/projects.html
@@ -209,7 +209,7 @@
             <img src="imgs/react-portfolio.png" class="img-thumbnail pro_img" alt="react-portfolio">
             <div class="card-content">
             <div class="card-body">
-              <h5 class="card-title text-center">Simple React Portfolio</h5>     
+              <h5 class="card-title text-center">React Portfolio Website</h5>     
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://simple-react-portfolio-mu.vercel.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
@@ -220,16 +220,15 @@
           </div>
 
           <div class="card" id="pro">
-            <img src="imgs/resume-builder.png" class="img-thumbnail pro_img" alt="react-resume-builder">
+            <img src="imgs/weather app.png" class="img-thumbnail pro_img" alt="react-resume-builder">
             <div class="card-content">
             <div class="card-body">
-              <h5 class="card-title text-center">React Resume Builder</h5>    
-              <p class="text-center fst-italic">This project is under development</p> 
+              <h5 class="card-title text-center">Weather Forecasting Application</h5>    
             </div>
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
-              <a href="https://react-resume-builder-0512.netlify.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
-              <a href="https://github.com/madhumitha-r26/React-Resume-Builder.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="#"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://madhumitha-r26.github.io/Weather_Forecasting_Application/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
+              <a href="https://github.com/madhumitha-r26/Weather_Forecasting_Application.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
+              <a href="https://drive.google.com/file/d/1YBBhVwyEA77I3LsMLz4sqSJtrEozkmXv/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
