--- a/certifications_highlights.html
+++ b/certifications_highlights.html
@@ -298,7 +298,7 @@ data-bs-offset="0" style="margin: 100px 10px 10px 10px;" data-bs-smooth-scroll="
         <li class="list-group-item">Top 25 contributors of GeeksForGeeks Write It Up League for sharing my TANCET experience under the competitive exam experience category. <b>(Sep 2023)</b></li>
         <li class="list-group-item">Attended a Workshop on “Learn and Build a Career in UI-UX Design” organized by Kaarwan Design School. <b>(Aug 2022)</b></li>
         <li class="list-group-item">Recipient of “Certificate of Recognition” from Lady Doak College for my active participation, leadership, exemplary abilities and skills during my undergraduate study in the year 2019 - 2022. <b>(Apr 2022)</b></li>
-        <li class="list-group-item">Scored 88.79 percentile in Tamil Nadu Common Enterance Test (TANCET) exam for MCA postgraduation degree. <b>(May 2022)</b></li>
+        <li class="list-group-item"> Scored 88.79 percentile in Tamil Nadu Common Entrance Test (TANCET) exam for MCA post graduation degree. <b>(May 2022)</b></li>
         <li class="list-group-item">Participated in the 10 days Online Training on “Development of Digital Game based eContent”, organized by CIET - NCERT in collaboration with AIM, NITI Aayog from 5 - 16 July, 2021 and submitted the digital games. <b>(July 2021)</b></li>
         <li class="list-group-item">Won 3rd Runner Up position in Zinglin Campus Challenge(ZCC), a video making contest conducted by Zinglin Media Private Limited and UFO Moviez India Limited. <b>(May 2021)</b></li>
       </ul>
