--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#services">Services</a>
+                <a class="nav-link" href="#education">Education</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#skills">Skills</a>
@@ -125,44 +125,49 @@
 
 <br>
 
-<!-- services -->
+<!-- education -->
 
 
-<section id="services" class="p-3">
-  <h2 class="mt-auto">SERVICES</h2>
+<section id="education" class="p-3">
 
-<div class="row row-cols-1 row-cols-md-3 px-3 py-3">
-<div class="col">
-<div class="card" id="ser">
-<img src="imgs/UIUX.png" class="card-img-top" alt="uiux" width="100" height="300">
-<div class="card-body">
-<h5 class="card-title text-center"><em>UI/UX Designing</em></h5>
-</div>
-</div>
-</div>
+  <h2 class="mt-auto">EDUCATION</h2>
+  
+  <div class="row row-cols-1 row-cols-md-3 px-3 py-3 d-flex justify-content-center">
+  
+    <div class="col">
+      <div class="card" id="edu">
+        <div class="card-body">
+          <h5 class="card-title">C.E.O.A Matriculation Higher Secondary School</h5>
+          <h6 class="fst-italic">Class XII</h6>
+          <p>2018 - 2019</p>
+        </div>
+      </div>
+    </div>
 
-<div class="col">
-<div class="card" id="ser">
-<img src="imgs/WEB.png" class="card-img-top" alt="fswd" width="200" height="300">
-<div class="card-body">
-<h5 class="card-title text-center"><em>Full-stack Web Development</em></h5>
-</div>
-</div>
-</div>
+    <div class="col">
+      <div class="card" id="edu">
+        <div class="card-body">
+          <h5 class="card-title">Lady Doak College</h5>
+          <h6 class="fst-italic">B.Sc Computer Science</h6>
+          <p>2019 - 2022</p>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col">
+      <div class="card" id="edu">
+        <div class="card-body">
+          <h5 class="card-title">The American College </h5>
+          <h6 class="fst-italic">Master of Computer Applications</h6>
+          <p>2022 - 2024</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<div class="col">
-<div class="card" id="ser">
-<img src="imgs/GD.png" class="card-img-top" alt="gd" width="200" height="300">
-<div class="card-body">
-<h5 class="card-title text-center"><em>Graphical Designing</em></h5>
-</div>
-</div>
-</div>
-</div>
-<br>
 
 <center>
-  <a href="education_experience.html">View My Education and Experiences</a>
+  <a href="experience.html">View My Experiences and Services</a>
 </center>
 
 </section>
