--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://zomatolandingpageclone240724.netlify.app/" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/zomato-landing-page.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i> </button></a> 
-              <a href="https://drive.google.com/file/d/1C9w7xl7oJ3UgXr3SKdM-61CE8x9vTHYN/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1C9w7xl7oJ3UgXr3SKdM-61CE8x9vTHYN/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
           </div>
           </div>
@@ -115,7 +115,7 @@
                 <div class="card-footer d-grid gap-1 d-flex justify-content-center">
                   <a href="https://booksky-project-emc.netlify.app" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
                   <a href="https://github.com/madhumitha-r26/Booksky.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-                  <a href="https://drive.google.com/file/d/1mqvQNdztXl_VIHXV03Ug9k501LmH7A9f/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+                  <a href="https://drive.google.com/file/d/1mqvQNdztXl_VIHXV03Ug9k501LmH7A9f/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
                 </div>
           </div>
           </div>
@@ -130,7 +130,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://burgerhutrestaurant.netlify.app/" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i> </button></a> 
               <a href="https://github.com/madhumitha-r26/Burger_Hut.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i>  </button></a> 
-              <a href="https://drive.google.com/file/d/1168nRDGCOzF4f39jYgzeykEkZt-1_IG4/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1168nRDGCOzF4f39jYgzeykEkZt-1_IG4/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
@@ -144,7 +144,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://onlinefrontendcodecompiler.netlify.app/" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i> </button></a> 
               <a href="https://github.com/madhumitha-r26/Online-Code-Compiler.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i>  </button></a> 
-              <a href="https://drive.google.com/file/d/1ZpKARUbhoOp9jFAbcMi_SqUDvM5O4jDr/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1ZpKARUbhoOp9jFAbcMi_SqUDvM5O4jDr/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
           </div>
           </div>
@@ -158,7 +158,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="http://fithouseunisexgym.lovestoblog.com/" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i> </button></a> 
               <a href="https://github.com/madhumitha-r26/Fit-House_Gym.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="https://drive.google.com/file/d/1P8R8tNCwf5hAUKCeDJKFtCw3fDBeX1-Z/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1P8R8tNCwf5hAUKCeDJKFtCw3fDBeX1-Z/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://snowicecreams.netlify.app/" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/Snow_Icecream_Landing_Page.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="https://drive.google.com/file/d/1dGqfh5StJLQ4gi7Z71W5MbxTg2V4pBfc/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1dGqfh5StJLQ4gi7Z71W5MbxTg2V4pBfc/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://todolistapp0608.netlify.app/" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/To-Do-List.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="https://drive.google.com/file/d/17SQVqmXD-9Qbpagn2Kb3XWMQDkb9hR3a/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/17SQVqmXD-9Qbpagn2Kb3XWMQDkb9hR3a/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
           </div>
           </div>
@@ -200,7 +200,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://calculatorproject0608.netlify.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/Calculator.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="https://drive.google.com/file/d/1-lupYI12q28rKEMsPDs0Y7FlCpg3KNlG/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1-lupYI12q28rKEMsPDs0Y7FlCpg3KNlG/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
@@ -214,7 +214,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://simple-react-portfolio-mu.vercel.app/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/Simple-React-Portfolio.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="https://drive.google.com/file/d/1LsXG7fJxLkZxB0cuHYVmQnFFQKEzVv_x/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1LsXG7fJxLkZxB0cuHYVmQnFFQKEzVv_x/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
@@ -228,7 +228,7 @@
             <div class="card-footer d-grid gap-1 d-flex justify-content-center">
               <a href="https://madhumitha-r26.github.io/Weather_Forecasting_Application/"  target="_blank"><button class="rounded-circle"><i class="fa-solid fa-link"></i></button></a> 
               <a href="https://github.com/madhumitha-r26/Weather_Forecasting_Application.git" target="_blank"><button class="rounded-circle"><i class="fa-brands fa-github"></i></button></a> 
-              <a href="https://drive.google.com/file/d/1YBBhVwyEA77I3LsMLz4sqSJtrEozkmXv/view?usp=sharing"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
+              <a href="https://drive.google.com/file/d/1YBBhVwyEA77I3LsMLz4sqSJtrEozkmXv/view?usp=sharing" target="_blank"><button class="rounded-circle"><i class="fa-solid fa-play"></i> </button></a> 
             </div>
             </div>
           </div>
@@ -238,7 +238,7 @@
     <center> 
      <p> 
       For more Web Development projects and other coding related projects visit my
-      <a href="https://github.com/madhumitha-r26?tab=repositories" target="_blank">GitHub Profile</a> and
+      <a href="https://github.com/madhumitha-r26?tab=repositories">GitHub Profile</a> and
       <a href="https://codepen.io/madhumitha-ravichandran26"> Codepen Profile </a> </p>
     </center>
 
