--- a/experience.html
+++ b/experience.html
@@ -43,7 +43,7 @@
               MADHUMITHA</h1>
           </div>
          </a>
-        
+        </div>
     </nav>
 </header>
 
@@ -62,14 +62,13 @@
               <h6>May 2024 - Aug 2024</h6>
               <p class="card-text">
                 <ul>
-                    <li> Developed a responsive and visually appealing product landing page for an ice cream shop, utilizing HTML for structure, CSS for styling, and Bootstrap for layout and mobile responsiveness.                  </li>
-                    <li> Designed intuitive navigation and visually engaging elements to enhance user experience and improve product engagement.                  </li>
-                    <li> Demonstrated skills in web design principles and an eye for UI design.                   </li>
+                    <li> Developed a responsive and visually appealing product landing page for an ice cream shop, utilizing HTML for structure, CSS for styling, and Bootstrap for layout and mobile responsiveness.</li>
+                    <li> Designed intuitive navigation and visually engaging elements to enhance user experience and improve product engagement.</li>
+                    <li> Demonstrated skills in web design principles and an eye for UI design. </li>
                 </ul>
               </p>
             </div>
           </div>
-
     </div>
 
 <br>
@@ -100,13 +99,12 @@
           <div class="card-body">
             <h5 class="card-title">National Service Scheme</h5>
             <h5 class="card-title"><u>Student Volunteer</u></h5>
-            <h6></h6>
             <p class="card-text">
                 <ul>
                     <li>Engaged in organizing and leading interactive workshops during college events, resulting in a 20% increase in student participation and engagement levels.</li>
                     <li>Participated in a week-long virtual camp focused on building interpersonal skills, fostering social awareness towards national issues, and developing teamwork abilities, impacting over 100 fellow attendees.</li>
                 </ul>
-            </p>
+            </p>   
           </div>
         </div>
         </div>
