--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
           </div>
         </div>
 
+        <br/>
+
         <center>
           <a href="experience.html">View My Experiences and Services</a>
         </center>
@@ -224,7 +226,7 @@
       <section id="skills" class="p-3">
         <h2 class="mt-auto">SKILLS</h2>
         <div class="container text-center">
-          <div class="row row-cols-2 row-cols-md-4 row-cols-xl-8">
+          <div class="row row-cols-2 row-cols-md-5 row-cols-xl-10">
             <div class="col">
               <img
                 src="https://img.icons8.com/?size=100&id=20909&format=png&color=000000"
@@ -358,6 +360,42 @@
                 alt="mongo-db"
               />
               <p class="sm-fs-3 md-fs-3 xl-fs-5">⭐⭐⭐</p>
+            </div>
+            <div class="col">
+              <img
+                width="100"
+                height="100"
+                src="https://img.icons8.com/?size=100&id=54087&format=png&color=000000"
+                alt="nodejs"
+              />
+              <p class="sm-fs-3 md-fs-3 xl-fs-5">⭐⭐⭐</p>
+            </div>
+            <div class="col">
+              <img
+                width="100"
+                height="100"
+                src="https://img.icons8.com/?size=100&id=CIAZz2CYc6Kc&format=png&color=000000"
+                alt="tailwind-css"
+              />
+              <p class="sm-fs-3 md-fs-3 xl-fs-5">⭐⭐⭐</p>
+            </div>
+            <div class="col">
+              <img
+                width="100"
+                height="100"
+                src="imgs/netlify.png"
+                alt="netlify"
+              />
+              <p class="sm-fs-3 md-fs-3 xl-fs-5">⭐⭐⭐⭐⭐</p>
+            </div>
+            <div class="col">
+              <img
+                width="100"
+                height="100"
+                src="imgs/vercel.png"
+                alt="vercel"
+              />
+              <p class="sm-fs-3 md-fs-3 xl-fs-5">⭐⭐⭐⭐</p>
             </div>
           </div>
         </div>
