--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <p class="card-text fw-lighter" style="color: #ffffff">
+                  <p style="color: #ffffff;text-align: justify;font-size: 24px;">
                     A passionate UI-UX designer, a full stack web developer
                     aspirant, and a Python learner who wants to ensure skills in
                     a software environment and contribute to the company's
