--- a/projects.html
+++ b/projects.html
@@ -351,7 +351,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1P8R8tNCwf5hAUKCeDJKFtCw3fDBeX1-Z/view?usp=sharing"
+                    href="https://youtu.be/4CSVgosikDY"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
