change in project link

--- a/projects.html
+++ b/projects.html
@@ -239,7 +239,7 @@
                       <i class="fa-brands fa-github"></i></button
                   ></a>
                   <a
-                    href="https://drive.google.com/file/d/1mqvQNdztXl_VIHXV03Ug9k501LmH7A9f/view?usp=sharing"
+                    href="https://www.linkedin.com/posts/madhumitha263-ravichandran_hi-connections-i-recently-created-the-booksky-activity-7224044681175650305-3Kdw?utm_source=share&utm_medium=member_desktop"
                     target="_blank"
                     ><button class="rounded-circle">
                       <i class="fa-solid fa-play"></i></button
