--- a/index.html
+++ b/index.html
@@ -149,13 +149,15 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body">
-                  <p style="color: #ffffff;text-align: justify;font-size: 24px;">
+                  <p
+                    style="color: #ffffff; text-align: justify; font-size: 24px"
+                  >
                     A passionate UI-UX designer, a full stack web developer
                     aspirant, and a Python learner who wants to ensure skills in
                     a software environment and contribute to the company's
-                    growth. Seeking an innovative and challenging career in a
-                    growing organization that allows me to utilize skills and
-                    provides career growth opportunities.
+                    growth. Seeking an innovative and challenging environment in
+                    a growing organization that provides an opportunity for
+                    career growth.
                   </p>
                   <div id="but">
                     <a
@@ -214,7 +216,7 @@
           </div>
         </div>
 
-        <br/>
+        <br />
 
         <center>
           <a href="experience.html">View My Experiences and Services</a>
