--- a/experience.html
+++ b/experience.html
@@ -65,6 +65,9 @@
             <h1 class="navlogo">&nbsp; MADHUMITHA</h1>
           </div>
         </a>
+        <a href="index.html" style="color: white; text-decoration: none">
+          Back</a
+        >
       </div>
     </nav>
   </header>
@@ -219,10 +222,6 @@
           </div>
         </div>
       </section>
-
-      <center>
-        <a href="index.html"><button class="back">Back</button></a>
-      </center>
     </div>
 
     <footer style="color: rgb(255, 255, 255); background-color: #1f0c46">
