--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
           </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul
-            class="navbar-nav nav-pills ms-auto"
-            style="align-items: end; margin-right: 5px"
-          >
+          <ul class="navbar-nav nav-pills ms-auto text-end">
             <li class="nav-item">
               <a class="nav-link active" href="#home">Home</a>
             </li>
@@ -91,6 +88,37 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-end"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Other Links
+              </a>
+              <ul class="dropdown-menu text-end">
+                <li>
+                  <a
+                    class="dropdown-item text-md-end"
+                    href="certifications.html"
+                    >Certifications</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item text-md-end" href="highlights.html"
+                    >Highlights</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item text-md-end" href="experience.html"
+                    >Experiences</a
+                  >
+                </li>
+              </ul>
             </li>
             <li class="nav-item d-lg-none d-md-block">
               <a class="nav-link" href="#contact">Contact</a>
@@ -217,10 +245,6 @@
         </div>
 
         <br />
-
-        <center>
-          <a href="experience.html">View My Experiences and Services</a>
-        </center>
       </section>
       <br />
 
@@ -403,12 +427,6 @@
         </div>
 
         <br />
-
-        <center>
-          <a href="certifications_highlights.html"
-            >View Course Certifications and Highlights</a
-          >
-        </center>
       </section>
 
       <!-- projects -->
