--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,7 @@
             <h1 class="navlogo">&nbsp; MADHUMITHA</h1>
           </div>
         </a>
+        <a href="index.html" style="color: white;text-decoration: none;"> Back</a>
       </div>
     </nav>
   </header>
@@ -709,7 +710,6 @@
           <a href="https://www.behance.net/madhumitha42">
             <p>For more UI/UX projects visit my Behance Profile</p>
           </a>
-          <a href="index.html"><button class="back">Back</button></a>
         </center>
       </section>
     </div>
