added two new projects

--- a/projects.html
+++ b/projects.html
@@ -176,7 +176,7 @@
         <h3 style="text-align: center">WEB DEVELOPMENT</h3>
 
         <div class="card-group web" style="height: auto">
-          <div class="row row-cols-1 row-cols-md-2 row-cols-xl-5 g-1">
+          <div class="row row-cols-1 row-cols-md-2 row-cols-xl-6 g-1">
             <div class="card" id="pro">
               <img
                 src="imgs/zomato.png"
@@ -500,6 +500,83 @@
                 </div>
               </div>
             </div>
+
+
+            <div class="card" id="pro">
+              <img
+                src="imgs/code scoop.png"
+                class="img-thumbnail pro_img"
+                alt="code scoop"
+              />
+              <div class="card-content">
+                <div class="card-body">
+                  <h5 class="card-title text-center">
+                    Code Scoop - Coding School Website
+                  </h5>
+                </div>
+                <div
+                  class="card-footer d-grid gap-1 d-flex justify-content-center"
+                >
+                  <a
+                    href="https://madhumitha-r26.github.io/Code_Scoop/"
+                    target="_blank"
+                    ><button class="rounded-circle">
+                      <i class="fa-solid fa-link"></i></button
+                  ></a>
+                  <a
+                    href="https://github.com/madhumitha-r26/Code_Scoop.git"
+                    target="_blank"
+                    ><button class="rounded-circle">
+                      <i class="fa-brands fa-github"></i></button
+                  ></a>
+                  <a
+                    href="https://drive.google.com/file/d/1QOcVcnIchNwedbR07PPyz7nChSrQmOr7/view?usp=sharing"
+                    target="_blank"
+                    ><button class="rounded-circle">
+                      <i class="fa-solid fa-play"></i></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="card" id="pro">
+              <img
+                src="imgs/restaurant inventory.png"
+                class="img-thumbnail pro_img"
+                alt="restaurant inventory"
+              />
+              <div class="card-content">
+                <div class="card-body">
+                  <h5 class="card-title text-center">
+                    Restaurant Inventory Website
+                  </h5>
+                </div>
+                <div
+                  class="card-footer d-grid gap-1 d-flex justify-content-center"
+                >
+                  <a
+                    href="https://madhumitha-r26.github.io/Restaurant-Inventory/"
+                    target="_blank"
+                    ><button class="rounded-circle">
+                      <i class="fa-solid fa-link"></i></button
+                  ></a>
+                  <a
+                    href="https://github.com/madhumitha-r26/Restaurant-Inventory.git"
+                    target="_blank"
+                    ><button class="rounded-circle">
+                      <i class="fa-brands fa-github"></i></button
+                  ></a>
+                  <a
+                    href="https://www.linkedin.com/posts/madhumitha263-ravichandran_cognorise-webdevelopment-restaurantpantry-activity-7245728147764084736-4Nv4?utm_source=share&utm_medium=member_desktop"
+                    target="_blank"
+                    ><button class="rounded-circle">
+                      <i class="fa-solid fa-play"></i></button
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            
 
             <div class="card" id="pro">
               <img
