--- a/highlights.html
+++ b/highlights.html
@@ -104,14 +104,14 @@
               organized by Kaarwan Design School. <b>(Aug 2022)</b>
             </li>
             <li class="list-group-item">
+              Scored 88.79 percentile in Tamil Nadu Common Entrance Test
+              (TANCET) exam for MCA post graduation degree. <b>(May 2022)</b>
+            </li>
+            <li class="list-group-item">
               Recipient of “Certificate of Recognition” from Lady Doak College
               for my active participation, leadership, exemplary abilities and
               skills during my undergraduate study in the year 2019 - 2022.
               <b>(Apr 2022)</b>
-            </li>
-            <li class="list-group-item">
-              Scored 88.79 percentile in Tamil Nadu Common Entrance Test
-              (TANCET) exam for MCA post graduation degree. <b>(May 2022)</b>
             </li>
             <li class="list-group-item">
               Participated in the 10 days Online Training on “Development of
@@ -145,6 +145,7 @@
       src="https://kit.fontawesome.com/yourcode.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
