--- a/projects.html
+++ b/projects.html
@@ -800,6 +800,7 @@
       </div>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
