--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                     aspirant, and a Python learner who wants to ensure skills in
                     a software environment and contribute to the company's
                     growth. Seeking an innovative and challenging environment in
-                    a growing organization that provides an opportunity for
-                    career growth.
+                    a growing organization that provides career growth
+                    opportunities.
                   </p>
                   <div id="but">
                     <a
