--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <p
                     style="color: #ffffff; text-align: justify; font-size: 24px"
                   >
-                    A passionate UI-UX designer, a full stack web developer
+                    A passionate UI-UX designer, a software developer
                     aspirant, and a Python learner who wants to ensure skills in
                     a software environment and contribute to the company's
                     growth. Seeking an innovative and challenging environment in
